Final Changes Added and deployed

--- a/VisaTracking/VisaTracking/VisaTracking.csproj
+++ b/VisaTracking/VisaTracking/VisaTracking.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\enrollmentDocuments\" />
+    <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\profileImages\" />
   </ItemGroup>
 
 </Project>
