--- a/VisaTracking/VisaTracking/appsettings.json
+++ b/VisaTracking/VisaTracking/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=A003-00155\\SQLSERVER;Database=VisaTracking;user=sa;password=1234@zubair;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=A003-00155\\SQLSERVER;Database=VisaTracking;user=sa;password=1234@zubair;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=66.23.225.135\\MSSQLSERVER2012;Database=VisaTracking;user=vt;password=Nagi13@1996;Trusted_Connection=False;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
